2000-04-25  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/guid/guid.c (guid_init): add hostname and domainname
 	to the mix.

	* src/engine/AccInfo.c (xaccAccountTypesCompatible): relax the
 	restrictions on account types. Go to three groups: asset &
 	liability, income & expense, equity.

	* src/engine/FileIO.c: no need to free NULL pointers.

2000-04-24  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/report/average-balance.scm: the min and max columns
	were swapped. Also, the last average balance entry wasn't being
	calculated correctly.

	* src/gnome/dialog-options.c: modified to use gnc-dateedit.

	* src/gnome/window-adjust.c: modified to use gnc-dateedit.

	* src/gnome/window-register.c: modified to use gnc-dateedit.

	* src/gnome/dialog-transfer.c: modified to use gnc-dateedit.

	* src/gnome/gnc-dateedit.c: new file. gnome date editor modified
 	to use gnucash date printing and parsing routines. I plan on
 	extending this with additional features, too.

	* src/engine/Group.c (xaccMallocAccountGroup): loop until we
	get a unique id. This is just paranoia code. Ditto for Account.c
	and Transaction.c.

	* src/engine/Account.c: add some 'const' keywords to string
	arguments. This affected many other files.

	* src/engine/Scrub.c: i18n strings used to make new accounts.

2000-04-22  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/dialog-options.c: use the default section, if present,
	when building the dialog.

	* src/scm/options.scm: option databases can have default sections.

	* src/scm/report/transaction-report-2.scm: make the default option
	section "Report Options". Change "x Display" section to "Display".
	Add title of report to string database.

2000-04-21  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/report/average-balance.scm: comment out query function.
	This needs to be fixed when the new query api gets g-wrapped.

	* src/engine/Query.c: (xaccFreeQuery): free the split list